# Fintamath

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  sonar-project.properties
benchmarks/: CMakeLists.txt
benchmarks/src/: ApproximateBench.cpp  CastBench.cpp  ParseBench.cpp  PolynomialPowerBench.cpp  SimplifyBench.cpp
native/: .gitignore  CMakeLists.txt
native/calculator/: Calculator.cpp  Calculator.hpp  NodeType.hpp  Parser.cpp  Tree.hpp
native/numbers/: BigDecimal.cpp  BigDecimal.hpp  BigInteger.cpp  BigInteger.hpp  Variable.cpp  Variable.hpp
native/operators/: Function.hpp  Operator.cpp  Operator.hpp
src/: CMakeLists.txt  Main.cpp  main.cpp
src/app/: CMakeLists.txt
src/app/tools/: CMakeLists.txt
src/app/ui/: .clang-tidy  CMakeLists.txt
src/calculator/: ExceptionClasses.hpp  NodeType.hpp  Parser.hpp  Solver.cpp  Solver.hpp
src/fintamath/: Object.hpp
src/fintamath/calculator/: Calculator.cpp  Calculator.hpp  ExceptionClasses.hpp  Expression.hpp  ISingleEntity.hpp  NodeType.hpp  Parser.cpp  Parser.hpp  Solver.cpp  Solver.hpp  Tree.hpp
src/fintamath/config/: ArithmeticConfig.cpp  ArithmeticConfig.hpp  CompExpressionConfig.cpp  Config.cpp  ConverterConfig.cpp  ConverterConfig.hpp  ExpressionConfig.cpp  ExpressionConfig.hpp  FunctionConfig.cpp  ParserConfig.cpp  ParserConfig.hpp  PrecisionConfig.cpp  PrecisionConfig.hpp  TypeConfig.cpp  TypeConfig.hpp
src/fintamath/constants/: ComplexInf.cpp  Constant.cpp  Constant.hpp  E.cpp  False.cpp  I.cpp  IConstant.cpp  Inf.cpp  NegInf.cpp  Pi.cpp  True.cpp  Undefined.cpp
src/fintamath/core/: ArgumentsVector.hpp  Arithmetic.cpp  Arithmetic.hpp  Boolean.cpp  Comparable.cpp  Comparable.hpp  Constants.hpp  Converter.cpp  Defines.hpp  IArithmetic.cpp  IArithmetic.hpp  IComparable.cpp  IComparable.hpp  IIncremental.hpp  IMathObject.cpp  IMathObject.hpp  IModular.hpp  Incremental.hpp  MathObject.cpp  MathObject.hpp  MathObjectBase.cpp  MathObjectBase.hpp  MathObjectClass.cpp  MathObjectIdStorage.cpp  Multipliable.hpp  PrefixTrie.cpp  Summable.hpp  Tokenizer.cpp  Variable.cpp
src/fintamath/exceptions/: Exception.h  Exception.hpp  FunctionCallException.hpp  InvalidInputException.hpp  InvalidInputFunctionException.hpp  InvalidInputUnaryOpearatorException.hpp  UndefinedBinaryOpearatorException.hpp  UndefinedException.hpp  UndefinedFunctionException.hpp  UndefinedUnaryOpearatorException.hpp
src/fintamath/expressions/: AddExpression.cpp  AddExpression.hpp  CompExpression.cpp  CompExpression.hpp  DerivateExpression.cpp  DerivateExpression.hpp  DerivativeExpression.cpp  DerivativeExpression.hpp  EqvExpression.cpp  EqvExpression.hpp  Expression.cpp  Expression.hpp  ExpressionBase.cpp  ExpressionComparator.cpp  ExpressionFunctions.cpp  ExpressionUtils.cpp  ExpressionUtils.hpp  FunctionExpression.cpp  FunctionExpression.hpp  IBinaryExpression.cpp  IBinaryExpression.hpp  IExpression.cpp  IExpression.hpp  IInvertable.hpp  ILogicNegatable.hpp  INegatable.hpp  IPolynomExpression.hpp  IUnaryExpression.cpp  IUnaryExpression.hpp  IndexExpression.cpp  IndexExpression.hpp  InvExpression.cpp  InvExpression.hpp  MulExpression.cpp  MulExpression.hpp  NegExpression.cpp  NegExpression.hpp  NotExpression.cpp  NotExpression.hpp  PolynomExpression.cpp  (+5 more)
src/fintamath/functions/: Abs.cpp  Abs.hpp  Acos.cpp  Acos.hpp  Acot.cpp  Acot.hpp  Asin.cpp  Asin.hpp  Atan.cpp  Atan.hpp  ConcreteFunction.cpp  ConcreteFunction.hpp  Cos.cpp  Cos.hpp  Cot.cpp  Cot.hpp  DoubleFactorial.cpp  DoubleFactorial.hpp  Exp.cpp  Exp.hpp  Factorial.cpp  Factorial.hpp  Function.cpp  Function.hpp  FunctionUtils.cpp  Functions.cpp  Functions.hpp  IFunction.cpp  IFunction.hpp  IOperator.cpp  IOperator.hpp  Lb.cpp  Lb.hpp  Lg.cpp  Lg.hpp  Ln.cpp  Ln.hpp  Log.cpp  Log.hpp  NamespaceFunctions.cpp  (+11 more)
src/fintamath/helpers/: Caster.hpp  Converter.cpp  Converter.hpp  MultiMethod.hpp  Parser.hpp  TypeInfo.hpp
src/fintamath/literals/: Boolean.cpp  Boolean.hpp  Constant.cpp  Constant.hpp  ILiteral.cpp  ILiteral.hpp  Literal.cpp  Literal.hpp  Variable.cpp  Variable.hpp
src/fintamath/math_objects/: MathObject.hpp  MathObjectParser.cpp  ParserInjector.hpp
src/fintamath/meta/: Converter.cpp  Converter.hpp  InheritanceTable.cpp  MultiMethod.hpp  Parser.hpp  TypeInfo.hpp
src/fintamath/nodes/: Node.hpp
src/fintamath/numbers/: .clang-tidy  BigInteger.cpp  BigInteger.hpp  Complex.cpp  Constant.cpp  Constant.hpp  Fraction.cpp  Fraction.hpp  IInteger.cpp  INumber.cpp  INumber.hpp  Integer.cpp  Integer.hpp  IntegerFunctions.cpp  IntegerFunctions.hpp  Number.cpp  Number.hpp  NumberAbstract.cpp  NumberConstants.cpp  NumberFunctions.cpp  NumberFunctions.hpp  NumberImpls.hpp  NumberUtils.cpp  NumericFunctions.cpp  NumericFunctions.hpp  Rational.cpp  Rational.hpp  RationalFunctions.cpp  Real.cpp  Real.hpp  RealFunctions.cpp  RealFunctions.hpp  RealNumberVariant.cpp  Variable.cpp  Variable.hpp
src/fintamath/operators/: Add.cpp  Add.hpp  Div.cpp  Div.hpp  Function.cpp  Function.hpp  Mul.cpp  Mul.hpp  NamespaceFunctions.cpp  NamespaceFunctions.hpp  Neg.cpp  Neg.hpp  Operator.cpp  Operator.hpp  Pow.cpp  Pow.hpp  Sub.cpp  Sub.hpp
src/fintamath/parser/: Tokenizer.cpp
src/fintamath/relations/: Relation.hpp
src/fintamath/tokenizer/: TokenVector.cpp  Tokenizer.cpp
src/fintamath/variables/: Boolean.cpp  (+2 more)
src/lib/: CMakeLists.txt
src/main/: Main.cpp
src/math_objects/: CMakeLists.txt
src/numbers/: BigInteger.cpp  BigInteger.hpp  Constant.cpp  Constant.hpp  Fraction.cpp  Fraction.hpp
src/operators/: Function.cpp  Function.hpp  NamespaceFunctions.cpp  NamespaceFunctions.hpp  Operator.cpp
src/presenter/: CMakeLists.txt
src/solver/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt  CalculatorTests.cpp
tests/resources/: negative_tests.txt  positive_tests.txt
tests/scripts/: coverage_filter.py
tests/src/: CalculatorTests.cpp  ConstantTests.cpp  ExpressionTests.cpp  FintamathTests.cpp  IntegerTests.cpp  InvalidArgumentTests.cpp  RationalTests.cpp  VariableTests.cpp
(+1097 files in other folders)
